src/renderer/components/ReactionsBar/styles.module.scss
@keyframes moveInBar {
  0% {
    opacity: 0;
    top: 20px;
  }

  100% {
    opacity: 1;
    top: 0;
  }
}

@keyframes moveInEmoji {
  0% {
    opacity: 0;
    top: 20px;
  }

  100% {
    opacity: 1;
    top: 0;
  }
}

.reactionsBar {
  animation: moveInBar 150ms;
  background-color: #666;
  border-radius: 25px;
  border: 2px solid rgba(0, 0, 0, 0.1);
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
  display: flex;
  padding-bottom: 4px;
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 4px;
  position: relative;
}

.reactionsBarButton {
  align-items: center;
  animation: moveInEmoji 250ms;
  background-color: transparent;
  border-radius: 50%;
  border: 0;
  display: flex;
  height: 40px;
  justify-content: center;
  margin: 0;
  padding: 0;
  position: relative;
  width: 40px;

  & ~ & {
    margin-left: 10px;
  }

  &.isFromSelf {
    background-color: #999;
  }

  &.showAllEmojis {
    background-color: #777;
    color: #ffffff;

    &:hover {
      background-color: #999;
    }
  }
}

.reactionsBarEmoji {
  font-size: 25px;
  margin-left: 2px;
  margin-top: 3px;
  transition: transform ease-out 200ms;
}

.reactionsBarButton {
  &:hover {
    .reactionsBarEmoji {
      transform: scale(2) translate3d(0, -8px, 0);
    }
  }
}

.showAllIcon {
  background-color: #efefef;
}

